use now commons codec